// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationItem parent and itemID with value 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="OUIA-Generated-NavItem-3"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="http://localhost/someValue/someID"
    />
  </li>
</div>
`;

exports[`NavigationItem parent undefined and itemID with value 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="OUIA-Generated-NavItem-4"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="http://localhost//someID"
    />
  </li>
</div>
`;

exports[`NavigationItem parent with value and itemID undefined 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="OUIA-Generated-NavItem-2"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="http://localhost/someValue/undefined"
    />
  </li>
</div>
`;

exports[`NavigationItem should render coorectly 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="OUIA-Generated-NavItem-1"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="http://localhost//undefined"
    />
  </li>
</div>
`;

exports[`NavigationItem with some navigate value set 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="OUIA-Generated-NavItem-5"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="[object Object]"
    />
  </li>
</div>
`;
